# sqlite_daemon

./: .gitignore  ANSWERS.md  ARCHITECTURE.md  CONNECTION_DETAILS.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  MAINTENANCE_GUIDE.md  MEMORY_GUIDE.md  QUICK_START.md  README.md  SINGLE_INSTANCE.md  data.db-shm  data.db-wal
cli/: Cargo.toml
cli/src/: main.rs
daemon/: Cargo.toml
daemon/src/: actor.rs  db.rs  main.rs  protocol.rs  router.rs  server.rs  single_instance.rs  worker.rs
daemon/tests/: integration_tests.rs
examples/: read_example.rs
