[workspace]
resolver = "2"
members = ["daemon", "cli"]

[workspace.dependencies]
tokio = { version = "1.41", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
time = { version = "0.3", features = ["macros", "formatting"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
