[package]
name = "skylinedb-cli"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
tracing-subscriber = { workspace = true }
interprocess = { version = "2.2", features = ["tokio"] }
bytes = "1.7"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Storage_FileSystem",
] }
